# rijksmuseum-se

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
lib/: embeddings.py
mathematica/: 01-embedding-geometry.nb  03-creator-stylespace.nb  04-temporal-journeys.nb  05-metadata-landscapes.nb  README.md  export_for_mathematica.py
notebooks/: 01-umap-explore.ipynb  02-pacmap-explore.ipynb
patches/: apply-patches.sh  mlx-vis-pacmap-memory-fix.patch  pacmap-mlx-memory-fix.patch
scripts/: _filters.py  _html_template.py  generate-pacmap-explorer.py  generate-tsne-explorer.py  generate-umap-animation.py  generate-umap-explorer.py
