[project]
name = "rijksmuseum-se"
version = "0.1.0"
description = "Rijksmuseum Semantic Explorer — MLX-accelerated embedding visualization"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "plotly",
    "jupyter",
    "ipywidgets",
    "hdbscan",
    "mlx-vis>=0.3.1",
    "matplotlib",
]

[tool.hatch.build.targets.wheel]
packages = ["lib"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
